fix(search): restore ES indexing on Windows